--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </center>
     <script src="angular.min.js"></script>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
