--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <found-items found-items="menu.found" on-remove="menu.removeMenuItem(index)" on-empty="menu.message"></found-items>
         </div>
     </center>
-    <script src="angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 
