--- a/foundItems.html
+++ b/foundItems.html
@@ -1,5 +1,5 @@
 {{item.name}}
 {{item.short_name}}
 {{item.description}}
-
+<input type="button" ng-click="menu.onRemove({index: $index})" class="btn btn-lg btn-primary" value="Don't want this one!">
 {{menu.onEmpty}}
