--- a/foundItems.html
+++ b/foundItems.html
@@ -1,5 +1,18 @@
+
+<!DOCTYPE html>
+<html lang="en" ng-app="NarrowItDownApp">
+head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	</head>
+	<body>
 {{item.name}}
 {{item.short_name}}
 {{item.description}}
 <input type="button" ng-click="menu.onRemove({index: $index})" class="btn btn-lg btn-primary" value="Don't want this one!">
 {{menu.onEmpty}}
+
+</body>
+
+</html>
